<resources>
    <string name="app_name">LanguageLandscape</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_duration">00:00.00</string>
    <string name="default_recording_name">New Recording</string>
    <string name="default_title">New Recording</string>
    <string name="default_language">Languages</string>
    <string name="Save">Save</string>
    <string name="default_description">Recording Description</string>
    <string name="default_speakers">Speakers</string>
    <string name="default_userName">User</string>
    <string name="edit">Edit</string>
    <string name="speaker">Speaker:</string>
    <string name="recordingList_language">Languages:</string>
    <string name="empty_recordings">You don\'t have any recordings yet. \nGo and record one</string>
    <string name="interpunct">·</string>
    <string name="example_description">Lucy tells the story of her life. She was born in Papua New Guinea where she lived with her parents and siblings until she went to the University of Papua New Guinea to get a degree in Journalism.</string>
    <string name="example_location">At Nel\'min Nos</string>
    <string name="option_upload">Upload</string>
    <string name="option_rename">Rename</string>
    <string name="option_delete">Delete</string>
    <string name="dialog_rename_title">Rename Recording</string>
    <string name="dialog_rename_positiveButton">RENAME</string>
    <string name="dialog_negativeButton">CANCEL</string>
    <string name="dialog_rename_hint">New recording name</string>
    <string name="language">Languages</string>
    <string name="entry1">Make Recording Help ></string>
    <string name="entry2">Edit and Upload Recording Help ></string>
    <string name="entry3">Add Recording Help ></string>
    <string name="entry4">Add Speaker Help ></string>
    <string name="entry5">Add Language Help ></string>
    <string name="entry6">Add Project Help ></string>
    <string name="entry7">Advanced Search Help ></string>
    <string name="entry8">Language Page Help ></string>
    <string name="entry9">Registration and Password Reset Help ></string>

    <string-array name="entries">
        <item>@string/entry1</item>
        <item>@string/entry2</item>
        <item>@string/entry3</item>
        <item>@string/entry4</item>
        <item>@string/entry5</item>
        <item>@string/entry6</item>
        <item>@string/entry7</item>
        <item>@string/entry8</item>
        <item>@string/entry9</item>
    </string-array>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="dialog_delete_positiveButton">DELETE</string>
    <string name="marker_more">MORE</string>
    <string name="default_date">Date</string>
    <string name="default_location">Location</string>
    <string name="default_playtime">00:00</string>
    <string name="recordingList_location">Location:</string>
    <string name="project_list_no_recording">No recording</string>
    <string name="drawer_browse_the_map">Browse the map</string>
    <string name="drawer_feed">Feed</string>
    <string name="drawer_my_profile">My profile</string>
    <string name="drawer_my_recordings">My Recordings</string>
    <string name="drawer_add_a_project">Add a project</string>
    <string name="drawer_add_a_recording">Add a Recording</string>
    <string name="drawer_my_projects">My projects</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_about">About</string>
    <string name="drawer_log_out">Log out</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_in">LOG IN</string>
    <string name="have_an_account">Have an account?</string>
    <string name="Dont_have_an_account">Doesn\'t have an account yet?</string>
    <string name="login_prompt">Username or email</string>
    <string name="login_password_prompt">password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="terms_of_service">By proceeding you also agree to Language Landscape\'s Terms of Service.</string>
    <string name="forgot_pass_send">send</string>
    <string name="forgot_pass_instruction">Enter your Language Landscape username or email address that you used to register. We\'ll send you an email with a link to reset your password.</string>
    <string name="button_finish">finish</string>
    <string name="name_prompt">What’s your recording called? Give it a title.</string>
    <string name="name_hint">Recording title</string>
    <string name="languages_prompt">What language(s) are in the recording?</string>
    <string name="languages_hint">Languages</string>
    <string name="speakers_prompt">Who’s in the recording?</string>
    <string name="speakers_hint">Speakers</string>
    <string name="aboutWhat_prompt">What are you talking about in the recording?</string>
    <string name="aboutWhat_hint">Weather, food, etc.</string>
    <string name="genre_prompt">What style or genre is the recording?</string>
    <string name="genre_hint">normal conversation, music, etc.</string>
    <string name="whichProject_prompt">Is your recording part of a project?</string>
    <string name="whichProject_hint">project name</string>
    <string name="description_prompt">Add a description of your recording</string>
    <string name="description_hint">description</string>
    <string name="keywords_prompt">Add some keywords for your recording</string>
    <string name="keywords_hint">anything</string>
    <string name="publicEdit_prompt">Can other people edit the info about this recording?</string>
    <string name="publicEdit_hint">yes or no</string>
    <string name="moreDetail_prompt">Add more detailed info about your recording</string>
    <string name="moreDetail_hint">detail</string>
    <string name="button_back">back</string>
</resources>
