<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:background="@android:color/white">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:contentDescription="Logo"
        android:scaleType="center"
        android:src="@drawable/ll_logo_full"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/round_button_red"
        android:text="@string/create_account"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/log_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Dont_have_an_account"
        app:layout_constraintBottom_toTopOf="@+id/create_account"
        app:layout_constraintLeft_toRightOf="@+id/create_account"
        app:layout_constraintRight_toLeftOf="@+id/create_account" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login_prompt"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login_password_prompt"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/nameText"
        app:layout_constraintRight_toRightOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/login"
        app:layout_constraintRight_toLeftOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</android.support.constraint.ConstraintLayout>