<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RecordingActivity">
    <!--tools:showIn="@layout/activity_record_nav_drawer">-->


    <LinearLayout
        android:id="@+id/recordBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/player"
            style="?buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_play_arrow_black_24dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/recorder"
            style="?buttonBarButtonStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_fiber_manual_record_black_24dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_save"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save" />

    </LinearLayout>


    <TextView
        android:id="@+id/recording_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recording_name"
        android:layout_below="@+id/recording_name"
        android:layout_marginTop="15dp"
        android:text="         " />

    <TextView
        android:id="@+id/recording_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timer"
        android:layout_below="@+id/timer"
        android:layout_marginTop="15dp"
        android:text="@string/default_recording_name" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_duration" />

    <TextView
        android:id="@+id/recording_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/recording_date"
        android:layout_alignParentRight="true"
        android:text="" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userDefined_name_textInput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/recording_name"
        android:layout_alignStart="@id/recording_name"
        android:layout_marginTop="180dp">

        <EditText
            android:id="@+id/userDefined_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/default_title"
            android:imeOptions="actionNext"
            android:inputType="text|textAutoCorrect" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userDefined_languages_textInput_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/recording_name"
        android:layout_alignStart="@id/recording_name"
        android:layout_alignTop="@id/userDefined_name_textInput_layout"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/userDefined_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="14"
            android:hint="@string/default_language"
            android:imeOptions="actionNext"
            android:inputType="text|textAutoCorrect" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/userDefined_speakers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userDefined_languages_textInput_layout"
        android:layout_alignStart="@+id/userDefined_languages_textInput_layout"
        android:layout_below="@+id/userDefined_languages_textInput_layout"
        android:layout_marginTop="10dp"
        android:ems="14"
        android:hint="@string/default_speakers"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:id="@+id/userDefined_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userDefined_languages_textInput_layout"
        android:layout_alignStart="@+id/userDefined_languages_textInput_layout"
        android:layout_below="@+id/userDefined_speakers"
        android:layout_marginTop="10dp"
        android:ems="18"
        android:hint="@string/default_description"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
        android:maxLines="3"
        android:textSize="16sp" />

    <!--<EditText-->
    <!--android:id="@+id/userDefined_time"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_description"-->
    <!--android:layout_alignStart="@+id/userDefined_description"-->
    <!--android:layout_below="@+id/userDefined_description"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="When did you make the recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_location"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_time"-->
    <!--android:layout_alignStart="@+id/userDefined_time"-->
    <!--android:layout_below="@+id/userDefined_time"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Where did you make the recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_person"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_location"-->
    <!--android:layout_alignStart="@+id/userDefined_location"-->
    <!--android:layout_below="@+id/userDefined_location"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Who's in the recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_subject"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_person"-->
    <!--android:layout_alignStart="@+id/userDefined_person"-->
    <!--android:layout_below="@+id/userDefined_person"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="What are you talking about in the recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_style"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_subject"-->
    <!--android:layout_alignStart="@+id/userDefined_subject"-->
    <!--android:layout_below="@+id/userDefined_subject"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="What style or genre is in the recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_part_project"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_style"-->
    <!--android:layout_alignStart="@+id/userDefined_style"-->
    <!--android:layout_below="@+id/userDefined_style"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Is your recording part of a project?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_keywords"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_part_project"-->
    <!--android:layout_alignStart="@+id/userDefined_part_project"-->
    <!--android:layout_below="@+id/userDefined_part_project"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Add some keywords for your recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_edit"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_keywords"-->
    <!--android:layout_alignStart="@+id/userDefined_keywords"-->
    <!--android:layout_below="@+id/userDefined_keywords"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Can other people edit the info about this recording?"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/userDefined_more_detail"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignLeft="@+id/userDefined_edit"-->
    <!--android:layout_alignStart="@+id/userDefined_edit"-->
    <!--android:layout_below="@+id/userDefined_edit"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:ems="18"-->
    <!--android:hint="Add more detailed info about your recording"-->
    <!--android:imeOptions="actionDone"-->
    <!--android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"-->
    <!--android:maxLines="3"-->
    <!--android:textSize="16sp" />-->
</RelativeLayout>
